implementation email templates part2
